manifests/monitoring/grafana/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  annotations:
    cert-manager.io/cluster-issuer: cloudflare
spec:
  tls:
  - hosts:
    - grafana.homelab.dsb.dev
    secretName: grafana-tls
  rules:
  - host: grafana.homelab.dsb.dev
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 80
        path: /
